@@ -12,8 +12,7 @@ public:
   bool removeLockfile();
   int  openResolv(int flags);
   int  openSysLog();
-  bool setPAPSecret(const char *name, const char *password);
-  bool setCHAPSecret(const char *name, const char *password);
+  bool setSecret(int method, const char *name, const char *password);
   bool removeSecret(int authMethode);
   bool setHostname(const char *name);
   bool execPPPDaemon(const char *arguments);
