@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "2.0pre15"
+#define KPPPVERSION "2.0pre16"
 #endif
